changed repo url

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shpontex/cropme.git"
+    "url": "git+https://github.com/max-g-tm/cropme.git"
   },
   "keywords": [
     "javascript",
